// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      Search
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
    <div>
      Loading ...
    </div>
    <div
      className="table"
    />
  </div>
</div>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={undefined}
>
  Search
  <input
    onChange={undefined}
    type="text"
    value={undefined}
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <span
      className="largeColumn"
    >
      <a
        href={undefined}
      >
        1
      </a>
    </span>
    <span
      className="midColumn"
    >
      1
       |
    </span>
    <span
      className="smallColumn"
      title="Number of comments"
    >
      1
       |
    </span>
    <span
      className="smallColumn"
      title="Points"
    >
      2
       
    </span>
    <span
      className="smallColumn"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      className="largeColumn"
    >
      <a
        href={undefined}
      >
        2
      </a>
    </span>
    <span
      className="midColumn"
    >
      2
       |
    </span>
    <span
      className="smallColumn"
      title="Number of comments"
    >
      1
       |
    </span>
    <span
      className="smallColumn"
      title="Points"
    >
      2
       
    </span>
    <span
      className="smallColumn"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
